# MMRL

./: README.md  settings.gradle.kts
.github/actions/build-apk/: action.yml
.github/workflows/: release-ci.yml
app/: build.gradle.kts
app/schemas/com.dergoogler.mmrl.database.AppDatabase/: 15.json
app/src/main/res/drawable/: star.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: plurals.xml  strings.xml  strings_terminal.xml  strings_webui.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-in/: strings.xml  strings_terminal.xml
app/src/main/res/values-it/: strings.xml  strings_terminal.xml  strings_webui.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: plurals.xml  strings.xml
app/src/main/res/values-vi/: plurals.xml  strings.xml  strings_antifeatures.xml  strings_terminal.xml  strings_webui.xml
app/src/main/res/values-zh-rCN/: strings.xml
compat/: build.gradle.kts
datastore/: build.gradle.kts
ext/: build.gradle.kts
fastlane/metadata/android/ar/: short_description.txt
fastlane/metadata/android/it-IT/: short_description.txt
fastlane/metadata/android/vi/: full_description.txt  short_description.txt
hidden-api/: build.gradle.kts
platform/: build.gradle.kts
platform/src/main/jni/: CMakeLists.txt
ui/: build.gradle.kts
ui/src/main/res/values-ar/: strings.xml
ui/src/main/res/values-it/: strings.xml
(+25 files in other folders)
